<resources>
    <string name="app_name">CalculateVat</string>
    <string name="coast_or_total_price">Coast or Total Price</string>
    <string name="select_vat_presentage">Select Vat Presentage</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="round_up_total">Round Up Total??</string>
    <string name="calculate_vat">Calculate Vat</string>
    <string name="tv_total_vat">Total Amount: %s</string>
</resources>